--- a/main.css
+++ b/main.css
@@ -42,11 +42,16 @@ a:hover {
     margin-bottom: 30px;
 }
 
+#separator-white {
+    color: white;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 #separator {
-    color: #00aeff;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-weight: 600;
+    color: #006d9a;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .navbar {
@@ -70,7 +75,7 @@ a:hover {
 }
 
 #last-updated {
-    color: #ccc;
+    color: #f0f3f6;
     margin-right: 20px;
     font-size: 13px;
 }
@@ -225,7 +230,9 @@ label {
     color: #708090;
 }
 
-.inuse, .ui-slider-range .inuse, .yadcf-filter-range-number-slider .inuse {
+.inuse,
+.ui-slider-range .inuse,
+.yadcf-filter-range-number-slider .inuse {
     background: white;
 }
 
@@ -240,6 +247,13 @@ th {
     vertical-align: bottom;
     line-height: 1.3;
     font-size: 13px;
+}
+
+table.dataTable thead th,
+table.dataTable thead td {
+    border-bottom: 1px solid #708090;
+    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, .15);
+    font-weight: unset;
 }
 
 td {
@@ -328,4 +342,8 @@ th:focus {
 
 .chosen-container-multi .chosen-choices li.search-field input[type='text'] {
     font-family: "Segoe UI", Tahoma, Helvetica, sans-serif;
+}
+
+table.dataTable.no-footer {
+    border-bottom: 1px solid #ddd;
 }
