--- a/main.css
+++ b/main.css
@@ -351,3 +351,7 @@ th:focus {
 table.dataTable.no-footer {
     border-bottom: 1px solid #ddd;
 }
+
+.dataTables_wrapper .dataTables_info {
+    padding-bottom: 40px;
+}
